--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Work</title>
+      <link rel="icon"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjYbG_CqIv0MgCiXTOXWuL6onVwxL4Ewb3kA&usqp=CAU">
 </head>
 
 <body>
@@ -30,14 +32,14 @@
     <h1 style="text-decoration: underline; text-align: center;"> TASK-2:</h1>
 
     <h1><u>Boys:</u></h1>
-    <ol>
+    <ol style="list-style-type:lower-roman">
         <li>Koushik</li>
         <li>Joy</li>
         <li>Gourab</li>
 
     </ol>
     <h1><u>Girls:</u></h1>
-    <ul start="5">
+    <ul type="square">
         <li>Mahima H.</li>
         <li>Musfiqa</li>
         <li>Big Mahima</li>
